[project]
name = "gradtop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "maturin>=1.12.2",
]

[project.optional-dependencies]
test = [
    "torch",
    "torchvision"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }, { file = "Cargo.toml" }]

