[project]
name = "gradtop"
version = "0.1.4"
description = "A terminal UI for monitoring neural network training in real time"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "torch",
    "torchvision"
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
cache-keys = [{ file = "src/**/*.rs" }, { file = "Cargo.toml" }]

[tool.maturin]
python-packages = ["gradtop"]
